# dgtnix

./: AUTHORS  Makefile  Makefile.am  Makefile.in  README  README.md  aclocal.m4  config.h  config.status  configure  configure.ac  libtool
include/: dgtnix.h
m4/: ax_set_version_info.m4
man/: Makefile  Makefile.am  Makefile.in  dgtnixClose.3  dgtnixGetBoard.3  dgtnixGetClockData.3  dgtnixInit.3  dgtnixPrintBoard.3  dgtnixQueryString.3  dgtnixSetOption.3  dgtnixTest.1  dgtnixTest.py.1  dgtnixTestBoard.3  dgtnixVirtualBoard.py.1
src/: Makefile  Makefile.am  Makefile.in  dgtnix.c  libdgtnix.la  libdgtnix_la-dgtnix.lo
src/.deps/: libdgtnix_la-dgtnix.Plo
src/.libs/: libdgtnix-1.so.9.0.1  libdgtnix.lai
utils/: Makefile  Makefile.am  Makefile.in  dgtnixTest  dgtnixTest.cpp  dgtnixTest.py
utils/.deps/: dgtnixTest-dgtnixTest.Po
utils/.libs/: dgtnixTest
